# you-have-to-deliver

./: .gitattributes  AGENTS.md  gemini.md  package-lock.json  package.json  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  constants.rs  core_settings.rs  lib.rs  macros.rs  main.rs  simulation_thread.rs  testing_main.rs  utils.rs
src-tauri/src/action_queues/: game_speed_manager.rs  mod.rs  sim_manager.rs  team_manager.rs  thought_manager.rs
src-tauri/src/db/: constants.rs  error.rs  init.rs  keys.rs  mod.rs
src-tauri/src/integrations/: events.rs  mod.rs  queues.rs  snapshots.rs  systems.rs  ui.rs
src-tauri/src/integrations/snapshots/: company.rs  debug_display.rs  game_speed.rs  mod.rs  needs.rs  person.rs  personality.rs  profile_picture.rs  skills.rs  snapshots.rs  stats.rs  stress.rs  stress_history.rs  team.rs  thoughts.rs  tick.rs  working_hours.rs
src-tauri/src/integrations/snapshots_emitter/: mod.rs  snapshots_emitter.rs
src-tauri/src/integrations/system_queues/: game_speed_manager.rs  mod.rs  shared.rs  sim_manager.rs  team_manager.rs
src-tauri/src/intergrations/: mod.rs
src-tauri/src/master_data/: skills.rs
src-tauri/src/resources/: init.rs  mod.rs
src-tauri/src/schedules/: init.rs  mod.rs
src-tauri/src/sim/: globals.rs  mod.rs
src-tauri/src/sim/action/: action.rs
src-tauri/src/sim/ai/: consideration.rs  goap.rs  mod.rs
src-tauri/src/sim/calendar/: availability.rs  components.rs  mod.rs  systems.rs
src-tauri/src/utils/: decimal33.rs  discreet_float.rs  errors.rs  mod.rs
(+154 files in other folders)
