[package]
name = "you-need-to-deliver"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "you_need_to_deliver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
legion = { version = "0.4.0", features = ["extended-tuple-impls"] }
rand = "0.9.1"
rand_distr = "0.5.1"
strum = "0.27.1"
strum_macros = "0.27.1"
dashmap = "6.1.0"
parking_lot = "0.12.3"
crossbeam = "0.8.4"
spin_sleep = "1.3.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
unicode-segmentation = "1.10"
arc-swap = "1.7.1"
rayon = "1.10.0"

